<resources>
    <string name="app_name">SAMID</string>
    <string name="Home">Home</string>
    <string name="activities">Activities</string>
    <string name="consultarP">Consultar pacientes</string>
    <string name="weekly_analysis">Weekly Analysis</string>
    <string name="menu_bar">menu bar</string>
    <string name="notificarion">notificarion</string>
    <string name="user_s_status_device">User´s status device</string>
    <string name="behevior_monitor_tracker">Behevior monitor tracker</string>
    <string name="samid_bracelet_v2_1">SAMID bracelet v2.1</string>
    <string name="braceletimage">braceletimage</string>
    <string name="baterry_svg">baterry_svg</string>
    <string name="have_you_experience_any_issues_with_this_device">Have you experience any issues with this device?</string>
    <string name="patient_succesfully_added">Patient successfully added!</string>
    <string name="ok">OK</string>
    <string name="tick_svg">tick_svg</string>
    <string name="hello_samuel">Hello, Samuel</string>
    <string name="imagen">imagen</string>
    <string name="devices">Devices</string>
    <string name="graph_ic">graph_ic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weekly_analisys">Weekly Analisys</string>
    <string name="check_now">Check now</string>
    <string name="history">History</string>
    <string name="device_status">Device Status</string>
    <string name="configuration">Configuration</string>
    <string name="pulsera_image">pulsera Image</string>
    <string name="username">Username</string>
    <string name="caretaker">Caretaker</string>
    <string name="logout">logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="user_name">user name</string>
    <string name="contact_info">contact info</string>
    <string name="home_fragment">Home fragment</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="batteryicon">batteryIcon</string>
    <string name="card_description">card_description</string>
    <string name="status">Status</string>
    <string name="patient_name">Patient_Name</string>
    <string name="patient_id">Patient_ID</string>
    <string name="patients">Patients</string>
    <string name="add_icon">Add_Icon</string>
    <string name="userimage">userimage</string>
    <string name="contact_information">Contact Info</string>
    <string name="Layout_Header">Layout_Header</string>
    <string name="icon">Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_with">Sign Up with</string>
    <string name="facebook_logo">Facebook logo</string>
    <string name="google_logo">Google logo</string>
    <string name="email_logo">Email logo</string>
    <string name="logo">Logo</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="i_have_already_an_account">I have already an account</string>
    <string name="user_s_weekly_stats">User´s weekly stats</string>
    <string name="cargando_datos">Cargando datos…</string>
    <string name="paciente">Paciente</string>
    <string name="manuel">Manuel</string>
    <string name="desease">Desease</string>
    <string name="delete_ic">Delete_ic</string>
    <string name="v">V</string>
    <string name="j">J</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="an_lisis_semanal_de_manuel">Análisis semanal de Manuel</string>
    <string name="switch_ic">switch_ic</string>
    <string name="_1_line">1 line</string>
    <string name="_2_line">2 line</string>
    <string name="_5_line">5 line</string>
    <string name="_4_line">4 line</string>
    <string name="_3_line">3 line</string>
    <string name="_6_line">6 line</string>
    <string name="_7_line">7 line</string>
    <string name="_8_line">8 line</string>
    <string name="_9_line">9 line</string>
    <string name="_10_line">10 line</string>
    <string name="d">D</string>
    <string name="s">S</string>
    <string name="_12_line">12 line</string>
    <string name="_13_line">13 line</string>
    <string name="_11_line">11 line</string>
    <string name="paciente_manuel">Paciente Manuel</string>
    <string name="pulso_y_oxigeno_monitor">Pulso y oxigeno monitor</string>
    <string name="_90">90</string>
    <string name="historial_semanal">Historial semanal</string>
    <string name="circulo">circulo</string>
    <string name="phone_ic">phone_ic</string>
    <string name="results">results</string>
    <string name="resultados">Resultados</string>
    <string name="ubication">ubication</string>
    <string name="ubicaciones">Ubicaciones</string>
    <string name="ca_das">Caídas</string>
    <string name="falls">falls</string>
    <string name="llamadas">Llamadas</string>
    <string name="spo2">SpO2</string>
    <string name="_90_spo2">90 SpO2</string>
    <string name="_100_lpm">100 LPM</string>
    <string name="time">time</string>
    <string name="fecha">fecha</string>
    <string name="anomalous_behavior_detected">Anomalous Behavior Detected</string>
    <string name="heart_ic">heart_ic</string>
    <string name="maria_is_calling_you">Maria is calling you</string>
    <string name="para_interpretar_el_nivel_de_una_ca_da_observa_la_gr_fica_de_aceleraci_n_en_los_ejes_x_y_y_z_un_pico_significativo_en_la_aceleraci_n_indica_el_impacto_de_la_ca_da_la_magnitud_del_pico_refleja_la_intensidad_del_impacto_cuanto_mayor_es_el_pico_mayor_es_la_fuerza_de_la_ca_da_esta_informaci_n_es_crucial_para_evaluar_la_gravedad_de_la_ca_da_y_tomar_las_medidas_necesarias_para_atender_al_paciente">Para interpretar el nivel de una caída, observa la gráfica de aceleración en los ejes X, Y y Z. Un pico significativo en la aceleración indica el impacto de la caída. La magnitud del pico refleja la intensidad del impacto: cuanto mayor es el pico, mayor es la fuerza de la caída. Esta información es crucial para evaluar la gravedad de la caída y tomar las medidas necesarias para atender al paciente.</string>
    <string name="nombre_1">Nombre 1</string>
    <string name="ca_da_leve">caída leve</string>
    <string name="_1_hora">1 hora</string>
    <string name="nombre_2">Nombre 2</string>
    <string name="_2_horas">2 horas</string>
    <string name="nombre_3">Nombre 3</string>
    <string name="_3_horas">3 horas</string>
    <string name="nombre_4">Nombre 4</string>
    <string name="_4_horas">4 horas</string>
    <string name="nombre_5">Nombre 5</string>
    <string name="_5_horas">5 horas</string>
    <string name="registrar_nuevo_paciente">Registrar nuevo paciente</string>
    <string name="_44">44</string>
    <string name="lpm">LPM</string>
    <string name="_48">48</string>
    <string name="samid_rastrea_a_tus_pacientes_instantantaneamente">SAMID rastrea a tus pacientes instantantaneamente.</string>
    <string name="encuentra_a_tu_paciente">Encuentra a tu paciente</string>
    <string name="si_el_paciente_necesita_medicaci_n_puedes_programar_alarmas_con_samid">Si el paciente necesita medicación, puedes programar alarmas con samid</string>
    <string name="configurar_alarmas">Configurar alarmas</string>
    <string name="background">background</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?</string>
    <string name="inicio">Inicio</string>
    <string name="pacientes">Pacientes</string>
    <string name="analisis_semanal">Analisis semanal</string>
    <string name="checar_ahora">Checar ahora</string>
    <string name="historial_de_salud_y_actividad">Historial de salud y actividad</string>
    <string name="estado_del_dispositivo">Estado del dispositivo</string>
    <string name="cuidador">Cuidador</string>
    <string name="has_tenido_dificultades_con_el_dispositivo">Has tenido dificultades con el dispositivo?</string>
    <string name="_11_02_24">11/02/24</string>
    <string name="_12_12_23">12/12/23</string>
    <string name="t_tulo_superior">Título Superior</string>
    <string name="guardar_ubicaci_n">Guardar Ubicación</string>
    <string name="ubicaciones_guardadas">Ubicaciones Guardadas</string>
    <string name="ubicaci_n">Ubicación:</string>
    <string name="hora">Hora:</string>
    <string name="fall_detected">Fall Detected</string>
    <string name="just_now">Just Now</string>
    Layout_Header
</resources>