<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="16dp"
    android:background="@color/Primary_Dark"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:layout_height="176dp">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:contentDescription="@string/userimage"
        android:src="@drawable/icon_account_circle"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/VioletLightActive"
        android:fontFamily="@font/montserratbold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_information"
        android:textColor="@color/VioletLightActive"
        android:fontFamily="@font/montserratbold"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"/>

</LinearLayout>