<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:gravity="top"
    android:padding="16dp"
    android:background="@color/verdoso2"
    android:id="@+id/Nav_Header"
    tools:context=".NavHeader"
    android:layout_height="120dp">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/userimage"
        android:src="@drawable/icon_account_circle"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="20dp"
        android:textColor="@color/Primary_Dark"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginStart="30sp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuidador"
        android:layout_marginTop="20dp"
        android:textColor="@color/Primary_Dark"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="30sp"
        android:textSize="16sp"/>
</LinearLayout>
