<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    tools:context=".MainActivity2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_rectangles"
        android:elevation="12dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="6dp"
        android:textColorHint="@color/Gray"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_app" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_rectangles"
        android:elevation="12dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="6dp"
        android:textColorHint="@color/Gray"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/register"
        android:textColor="@color/Secondary_Light"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_input"
        android:id="@+id/register_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>