<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/login_background"
    tools:context=".DeviceStatus">

    <ImageView
        android:contentDescription="@string/menu_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="24dp"
        android:src="@drawable/baseline_menu_24"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="24dp"/>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/notificarion"
        android:src="@drawable/notification_icon"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_s_status_device"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserratregular"
        android:textColorHint="#2E268E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <view
        android:id="@+id/card"
        class="androidx.cardview.widget.CardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="150dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:elevation="100dp"
        android:textSize="15sp"
        android:fontFamily="@font/montserratm"
        android:hint="@string/behevior_monitor_tracker"
        android:textColorHint="@color/black"
        android:id="@+id/cardtittle"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@id/cardtittle"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:elevation="100dp"
        android:textSize="12sp"
        android:fontFamily="@font/montserratm"
        android:hint="@string/samid_bracelet_v2_1"
        android:textColorHint="@color/black"
        android:id="@+id/cardsubtittle"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/cardsubtittle"
        app:layout_constraintBottom_toBottomOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        android:src="@drawable/smartband"
        android:elevation="100dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
