<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="250dp"

    android:padding="20dp">



    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:cardCornerRadius="40dp"

        android:id="@+id/card"
        android:padding="8dp"/>

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:id="@+id/tick_svg"
        android:contentDescription="@string/tick_svg"
        android:src="@drawable/tick_circle_svg"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card"/>

    <!-- Dialog Message -->
    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_succesfully_added"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tick_svg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/positive_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_message"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
