<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:background="@drawable/shadow"
        app:cardBackgroundColor="@color/Primary_Light"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/phone"
        android:contentDescription="@string/phone_ic"
        android:src="@drawable/phone_ic"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintBottom_toBottomOf="@id/card"
        android:elevation="6dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultados"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="20sp"
        android:elevation="6dp"
        android:layout_marginEnd="80dp"
        android:textColorHint="@color/Secondary_Darker"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintBottom_toBottomOf="@id/card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:background="@drawable/shadow"
        app:cardBackgroundColor="@color/Primary_Light"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/results"
        android:contentDescription="@string/results"
        android:src="@drawable/results"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/card2"
        app:layout_constraintTop_toTopOf="@id/card2"
        app:layout_constraintBottom_toBottomOf="@id/card2"
        android:elevation="6dp"/>

    <TextView
        android:id="@+id/title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultados"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="20sp"
        android:elevation="6dp"
        android:layout_marginEnd="80dp"
        android:textColorHint="@color/Secondary_Darker"
        app:layout_constraintEnd_toEndOf="@id/card2"
        app:layout_constraintTop_toTopOf="@id/card2"
        app:layout_constraintBottom_toBottomOf="@id/card2" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:background="@drawable/shadow"
        app:cardBackgroundColor="@color/Primary_Light"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/ubication"
        android:contentDescription="@string/ubication"
        android:src="@drawable/location_ic"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/card3"
        app:layout_constraintTop_toTopOf="@id/card3"
        app:layout_constraintBottom_toBottomOf="@id/card3"
        android:elevation="6dp"/>

    <TextView
        android:id="@+id/title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubicaciones"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="20sp"
        android:elevation="6dp"
        android:layout_marginEnd="80dp"
        android:textColorHint="@color/Secondary_Darker"
        app:layout_constraintEnd_toEndOf="@id/card3"
        app:layout_constraintTop_toTopOf="@id/card3"
        app:layout_constraintBottom_toBottomOf="@id/card3" />






</androidx.constraintlayout.widget.ConstraintLayout>